--- a/roles/avahi/tasks/main.yml
+++ b/roles/avahi/tasks/main.yml
@@ -2,6 +2,13 @@
 - name: Assign hostname {{assigned_hostname}}
   hostname: name="{{assigned_hostname}}"
 
+- name: Change hostname in /etc/hosts
+  lineinfile:
+    regexp: '^127\.0\.1\.1'
+    state: present
+    line: '127.0.1.1 {{assigned_hostname}}'
+    path: /etc/hosts
+
 - name: Enable avahi service
   systemd:
     name: avahi-daemon
