Make notificator importable

--- a/roles/notificator/tasks/main.yml
+++ b/roles/notificator/tasks/main.yml
@@ -3,4 +3,7 @@
   debug: msg={{telegram}}
 
 - name: Add utility to notify through a Telegram channel
-  template: src=telegram-notificator.py.j2 dest=/usr/local/bin/telegram-notificator mode=0711
+  template: src=notificator.py.j2 dest=/usr/lib/python3/dist-packages/notificator.py mode=0711
+
+- name: Make it possible to invoke the utility from the command line
+  file: state=link src=/usr/lib/python3/dist-packages/notificator.py dest=/usr/local/bin/notificator
