--- a/roles/bluealsa/tasks/main.yml
+++ b/roles/bluealsa/tasks/main.yml
@@ -12,6 +12,7 @@
       value: 0
     - key: Name
       value: 'Blue{{assigned_hostname[0]|upper}}{{assigned_hostname[1:]|lower}}'
+  notify: Restart bluetooth
 
 - name: Disable hostname plugin of bluetoothd (allow manual name set)
   ini_file:
@@ -19,6 +20,9 @@
     section: Service
     option: ExecStart
     value: /usr/lib/bluetooth/bluetoothd --noplugin=hostname
+  notify:
+    - Reload systemd
+    - Restart bluetooth
 
 - name: Enable A2DP sink mode in bluealsa
   ini_file:
@@ -26,25 +30,35 @@
     section: Service
     option: ExecStart
     value: /usr/bin/bluealsa -p a2dp-sink
+  notify:
+    - Reload systemd
+    - Restart bluealsa
 
 - name: Install a2dp-agent
   copy: src=a2dp-agent dest=/usr/local/bin/a2dp-agent mode=0755
+  notify: Restart bt-agent-a2dp
 
 - name: Install bt-agent-a2dp service
   copy: src=bt-agent-a2dp.service dest=/etc/systemd/system/bt-agent-a2dp.service mode=0644
+  notify:
+    - Reload systemd
+    - Restart bt-agent-a2dp
 
 - name: Install a2dp-playback service
   template: src=a2dp-playback.service.j2 dest=/etc/systemd/system/a2dp-playback.service mode=0644
+  notify:
+    - Reload systemd
+    - Restart a2dp-playback
 
-- name: Reload systemd settings
-  systemd:
-    daemon_reload: yes
+- meta: flush_handlers
 
-- name: Start the Bluetooth audio services
+- name: Enable and start the Bluetooth audio services
   systemd:
     name: '{{item}}'
     state: started
     enabled: yes
   loop:
+    - bluetooth
+    - bluealsa
     - bt-agent-a2dp
     - a2dp-playback
