Improve Telegram notificator

--- a/roles/notificator/tasks/main.yml
+++ b/roles/notificator/tasks/main.yml
@@ -1,6 +1,9 @@
 ---
 - name: Add utility to notify through a Telegram channel
-  template: src=notificator.py.j2 dest=/usr/lib/python3/dist-packages/notificator.py mode=0711
+  copy: src=notificator.py dest=/usr/lib/python3/dist-packages/notificator.py mode=0755
+
+- name: Add configuration for the Telegram notificator
+  template: src=notificator.json.j2 dest=/usr/lib/python3/dist-packages/notificator.json mode=0711
 
 - name: Make it possible to invoke the utility from the command line
   file: state=link src=/usr/lib/python3/dist-packages/notificator.py dest=/usr/local/bin/notificator
