--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 host_key_checking = False
-remote_user = pi
+remote_user = ubuntu
 vault_password_file = .vault_password
 pipelining = True
