--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -2,48 +2,13 @@
 - name: Update list of packages
   apt: cache_valid_time=43200 update_cache=yes
 
-- name: Install apt preliminary requirements
-  apt:
-    state: present
-    name:
-      - apt-transport-https
-      - curl
-
-- name: Add and verify apt key for Raspotify
-  apt_key:
-    id: 2CC9B80F5AE2B7ACEFF2BA3209146F2F7953A455
-    url: https://dtcooper.github.io/raspotify/key.asc
-
-- name: Add Raspotify apt repository
-  apt_repository:
-    repo: deb https://dtcooper.github.io/raspotify raspotify main
-    update_cache: true
-
 - name: Install base packages
   apt:
     state: present
     name:
-      - autoconf
-      - automake
-      - avahi-daemon
-      - bluealsa
-      - build-essential
-      - chrony
-      - git
-      - libasound2-dev
-      - libavahi-client-dev
-      - libconfig-dev
-      - libdaemon-dev
-      - libpopt-dev
-      - libpulse-dev
-      - libsoxr-dev
-      - libssl-dev
-      - libtool
-      - python-dbus
-      - python3-klein
-      - raspotify
-      - vim-nox
-      - xmltoman
-      - ansible
-  tags:
-  - only
+      - openvpn
+      - isc-dhcp-server
+      - iptables
+      - speedometer
+      - jq
+      - screen
