--- a/site.yml
+++ b/site.yml
@@ -2,24 +2,25 @@
 - hosts: all
   become: yes
   vars:
-    shairport_sync_ver: 3.3.6
-    # How to figure out the ALSA device?
-    # https://superuser.com/questions/53957/what-do-alsa-devices-like-hw0-0-mean-how-do-i-figure-out-which-to-use
-    # Use `aplay -l` to get the list of devices - for USB, names may change! hw:0,1 means "card 0, device 1"
-    # Use `aplay -L` to get aliases. `plughw` devices have proper software conversions, use them.
-    alsa_airplay:
-      device: plughw:CARD=Device,DEV=0
-      mixer_device: hw:CARD=Device
-      mixer_name: Speaker
-      mixer_volume_pct: 100
+    network:
+      ethernet:
+        device: eth0
+        address: 192.168.203.1/24
+        dhcp:
+          subnet: '192.168.203.0'
+          mask: '255.255.255.0'
+          range:
+            low: '192.168.203.30'
+            high: '192.168.203.200'
+            dns:
+            - '1.1.1.1'
+            - '8.8.8.8'
+            - '8.8.4.4'
+            - '9.9.9.9'
+      wifi:
+        device: wlan0
   roles:
     - role: packages
-    - role: timesync
     - role: ipv6
-    - role: avahi
-    - role: airplay
-    - role: bluealsa
-    - role: utils
-    - role: raspotify
+    - role: network
     - role: readonly
-    - role: gists
