--- a/roles/pythons/files/requirements.txt
+++ b/roles/pythons/files/requirements.txt
@@ -2,4 +2,5 @@ python-telegram-bot[job-queue]==21.1.1
 pydantic==2.7.1
 isort==5.13.2
 black==24.4.2
-requests==2.31.0
+requests==2.32.3
+emoji-country-flag==2.0.1
